center align fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -208,6 +208,7 @@ input, select, textarea {
 
 	h3 {
 		font-size: 1.25em;
+		margin-right: 36px;
 	}
 
 	h4 {
@@ -2269,8 +2270,9 @@ input, select, textarea {
 
 		.icon.alt {
 			display: inline-block;
-			border: solid 1px;
+			/* border: solid 1px; */
 			border-radius: 100%;
+			padding:4px;
 		}
 
 			.icon.alt:before {
@@ -2346,6 +2348,7 @@ input, select, textarea {
 
 		.icon.alt:hover {
 			background-color: rgba(255, 255, 255, 0.075);
+			box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
 		}
 
 		.icon.alt:active {
@@ -3083,7 +3086,7 @@ input, select, textarea {
 		}
 
 		#header.alt {
-			padding: 7em 5em 4em 5em ;
+			padding: 2em 5em 4em 5em ;
 		}
 
 			#header.alt h1 {
@@ -3117,7 +3120,13 @@ input, select, textarea {
 				transition-delay: 0s;
 				display: block;
 				margin: 0 0 1.5em 0;
+
+				position: relative;
+				width: 6em;
+				display: flex;
+				margin: auto;
 			}
+			
 
 				#header.alt .logo img {
 					display: block;
@@ -3144,7 +3153,7 @@ input, select, textarea {
 			}
 
 				#header.alt {
-					padding: 5em 3em 2em 3em ;
+					padding: 2em 3em 2em 3em ;
 				}
 
 		}
@@ -3610,6 +3619,7 @@ input, select, textarea {
 				}
 
 		@media screen and (max-width: 1280px) {
+			
 
 			#main > .main {
 				padding: 4em 4em 2em 4em ;
@@ -3713,10 +3723,12 @@ input, select, textarea {
 		}
 
 		@media screen and (max-width: 1280px) {
+			
 
 			#footer {
 				padding: 4em 4em 2em 4em ;
 			}
+			
 
 		}
 
@@ -3739,7 +3751,14 @@ input, select, textarea {
 				#footer .copyright {
 					text-align: center;
 				}
+				dl.alt dt{
+				display: none;
+			}
+			dl.alt dd{
+				margin: 0;
+			}
 
+				
 		}
 
 		@media screen and (max-width: 736px) {
@@ -3747,13 +3766,27 @@ input, select, textarea {
 			#footer {
 				padding: 3em 2em 1em 2em ;
 			}
+			dl.alt dt{
+				display: none;
+			}
+			dl.alt dd{
+				margin: 0;
+			}
 
 		}
+		
+
 
 		@media screen and (max-width: 480px) {
 
 			#footer {
 				padding: 3em 1.5em 1em 1.5em ;
+			}
+			dl.alt dt {
+				display: none;
+			}
+			dl.alt dd{
+				margin: 0;
 			}
 
 		}
